--- a/travel-client/src/pages/global.scss
+++ b/travel-client/src/pages/global.scss
@@ -2,55 +2,73 @@
   padding: 64px;
 
   main {
-    display: grid;
-    grid-template-columns: repeat(4, 250px);
     h1 {
-      grid-column: span 4;
+      margin-bottom: 10px;
     }
 
     .order-product-item {
-      display: flex;
-      gap: 10px;
+      & > div:nth-child(1) {
+        & > * {
+          font-weight: 500;
+          font-size: 16px;
 
-      & > div {
-        margin-top: 10px;
-
-        & > div {
-          position: relative;
-          text-align: center;
-          overflow: hidden;
-          width: 100%;
-          aspect-ratio: 1.5;
-
-          img {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 100%;
-            transform: translate(-50%, -50%);
+          &:not(:last-child) {
+            margin-bottom: 10px;
           }
         }
+      }
 
-        form {
-          margin-top: 10px;
-          display: flex;
-          gap: 10px;
+      & > div:nth-child(2) {
+        margin-top: 10px;
+        display: flex;
+        gap: 10px;
 
-          label {
+        .item {
+          div {
+            position: relative;
             text-align: center;
+            overflow: hidden;
+            aspect-ratio: 1.5;
+            width: 250px;
+
+            img {
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              width: 100%;
+              transform: translate(-50%, -50%);
+            }
           }
 
-          input {
+          form {
+            margin-top: 10px;
+            display: flex;
+            gap: 10px;
+            justify-content: center;
+
+            label {
+              text-align: center;
+            }
+
+            input {
+              width: 40px;
+            }
           }
         }
       }
     }
+
     .order-product-option {
       grid-column: span 4;
       display: flex;
       margin-top: 20px;
+
       & > div {
-        width: 50%;
+        width: 520px;
+
+        &:first-child {
+          margin-right: 10px;
+        }
       }
     }
   }
