--- a/travel-client/src/pages/global.scss
+++ b/travel-client/src/pages/global.scss
@@ -7,18 +7,18 @@
     }
 
     .order-product-item {
-      // & > div:nth-child(1) {
-      //   & > * {
-      //     font-weight: 500;
-      //     font-size: 16px;
-
-      //     &:not(:last-child) {
-      //       margin-bottom: 10px;
-      //     }
-      //   }
-      // }
-
       & > div:nth-child(1) {
+        & > * {
+          font-weight: 500;
+          font-size: 16px;
+
+          &:not(:last-child) {
+            margin-bottom: 10px;
+          }
+        }
+      }
+
+      & > div:nth-child(2) {
         margin-top: 10px;
         display: flex;
         gap: 10px;
